--- a/src/Components/Newsletter/Newsletter.css
+++ b/src/Components/Newsletter/Newsletter.css
@@ -1,11 +1,12 @@
 .Newsletter {
   background-color: #29CC6A;
-  height: 300px;
+  padding: 50px 0 50px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 80px 0 0 0;
+
 }
 
 .Newsletter__title {
@@ -13,5 +14,85 @@
   font-weight: bold;
   line-height: 36px;
   color: white;
+  text-align: center;
+}
 
+.Newsletter__form {
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Newsletter__form input {
+  height: 44px;
+  width: 500px;
+  border: white 1px solid;
+  color: #29CC6A;
+  padding-left: 20px;
+}
+
+.Newsletter__form input:focus {
+  padding-left: 20px;
+}
+
+.Newsletter__form input::placeholder {
+  color: #29CC6A;
+}
+
+.Newsletter__form__button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 48px;
+  font-size: 16px;
+  color: white;
+  background-color: #29CC6A;
+  padding: 0 50px 0 50px;
+  transition-duration: 500ms;
+  cursor: pointer;
+  border: #ffffff solid 2px;
+  text-align: center;
+}
+
+.Newsletter__form__button:hover {
+  color: #29CC6A;
+  background-color: #ffffff;
+  padding: 0 50px 0 50px;
+  border-left: #29CC6A solid 2px;
+  text-align: center;
+}
+
+.Newsletter__subtitle {
+  font-size: 16px;
+  line-height: 24px;
+  color: white;
+  text-align: center;
+}
+
+input::value {
+  color: red;
+}
+
+
+@media only screen and (max-width: 750px) {
+  .Newsletter__form input {
+    width: 350px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .Newsletter__form input {
+    width: 250px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .Newsletter__form input {
+    width: 180px;
+  }
+
+  .Newsletter__form__button {
+    padding: 0 20px 0 20px;
+  }
 }
